<resources>
    <string name="app_name">HW5_YelpClone</string>
    <string name="image_view">image-view</string>
    <string name="elen_diner">Elen Diner</string>
    <string name="ratingbar">ratingBar</string>
    <string name="_250_reviews">250 Reviews</string>
    <string name="_454_good_ave">454 Good Ave</string>
    <string name="lunch">Lunch</string>
    <string name="_1_5_mi">1.5 mi</string>
    <string name="search">Search</string>
    <string name="search_for_food">Search for Food</string>
</resources>